[gd_scene load_steps=17 format=1]

[ext_resource path="res://scripts/mainScerne.gd" type="Script" id=1]
[ext_resource path="res://scripts/morcegones.gd" type="Script" id=2]
[ext_resource path="res://assets/morcegones.png" type="Texture" id=3]
[ext_resource path="res://assets/background/cave_bg.png" type="Texture" id=4]
[ext_resource path="res://assets/ObstaclesScene.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/obstacleGenerator.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/font160.fnt" type="BitmapFont" id=7]
[ext_resource path="res://sounds/horror ambient.ogg" type="AudioStream" id=8]
[ext_resource path="res://sounds/jumppp22.ogg" type="AudioStream" id=9]
[ext_resource path="res://sounds/score.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/die.ogg" type="AudioStream" id=11]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 96.8735

[sub_resource type="Animation" id=2]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 4 ]
}

[sub_resource type="SegmentShape2D" id=3]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 999.947, -0.0779924 )

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 1000.01, -0.0169678 )

[sub_resource type="Animation" id=5]

resource/name = "BackgroundAnim"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundAnimation/bgSprite1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 500.719, 847.377 ), Vector2( -498.281, 844.377 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackgroundAnimation/bgSprite2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1491, 847.885 ), Vector2( 496, 847.885 ) ]
}

[node name="MainNode" type="Node2D"]

z/z = 1
script/script = ExtResource( 1 )

[node name="Character" type="RigidBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 100, 850 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.935839, 0, 0, 0.912452, 63.466, 2.3949 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 10.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 2 )

[node name="CharacterSprite" type="Sprite" parent="Character"]

editor/display_folded = true
transform/scale = Vector2( 9, 9 )
texture = ExtResource( 3 )
flip_h = true
hframes = 6
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Character/CharacterSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fly = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "fly"

[node name="CharacterCollisionShape" type="CollisionShape2D" parent="Character"]

transform/pos = Vector2( 63.466, 2.3949 )
transform/scale = Vector2( 0.935839, 0.912452 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="ScreenLimits" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 4 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 1700 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="TopLimit" type="CollisionShape2D" parent="ScreenLimits"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="BottomLimit" type="CollisionShape2D" parent="ScreenLimits"]

transform/pos = Vector2( 0, 1700 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 1

[node name="BackgroundAnimation" type="AnimationPlayer" parent="."]

editor/display_folded = true
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/BackgroundAnim = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "BackgroundAnim"

[node name="bgSprite1" type="Sprite" parent="BackgroundAnimation"]

transform/pos = Vector2( -777.82, 849.036 )
transform/scale = Vector2( 3.98083, 3.40894 )
texture = ExtResource( 4 )

[node name="bgSprite2" type="Sprite" parent="BackgroundAnimation"]

transform/pos = Vector2( 500.659, 847.885 )
transform/scale = Vector2( 3.98083, 3.40894 )
texture = ExtResource( 4 )

[node name="Obstacles" type="Node2D" parent="."]

editor/display_folded = true
z/z = 1

[node name="ObstaclesNode1" parent="Obstacles" instance=ExtResource( 5 )]

transform/pos = Vector2( 819.981, 829.299 )
z/z = 1
speed = -400

[node name="Position2DObstacleGenerator" type="Position2D" parent="Obstacles"]

transform/pos = Vector2( 1126.48, 850.58 )
script/script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Obstacles/Position2DObstacleGenerator"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="TimerGameReset" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Node2DScore" type="Node2D" parent="."]

editor/display_folded = true
z/z = 3

[node name="ControlScore" type="Control" parent="Node2DScore"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="LabelScore" type="Label" parent="Node2DScore/ControlScore"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 990.0
margin/bottom = 173.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StreamPlayerBackgroundMusic" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="StreamPlayerFly" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = false
stream/volume_db = 3.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="StreamPlayerScore" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = false
stream/volume_db = 10.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="StreamPlayerDeath" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 11 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="timeout" from="Obstacles/Position2DObstacleGenerator/Timer" to="Obstacles/Position2DObstacleGenerator" method="_on_Timer_timeout"]

[connection signal="timeout" from="TimerGameReset" to="." method="_on_TimerGameReset_timeout"]


